chore: initial commit

--- a/packages/providers/src/MsalAuthProvider/MsalAuthProvider.doc.mdx
+++ b/packages/providers/src/MsalAuthProvider/MsalAuthProvider.doc.mdx
@@ -41,8 +41,8 @@ const Home = () => {
   );
 };
 const App = () => {
-  const clientId = '9a565907-72fc-4c10-8c07-883463e5faa4'; // Replace with your own client ID
-  const tenantId = 'c9340d0a-8762-4b43-a2d1-f59bd6ef8726'; // Replace with your own tenant ID
+  const clientId = '<YOUR_CLIENT_ID>'; // Replace with your own client ID
+  const tenantId = '<YOUR_TENANT_ID>'; // Replace with your own tenant ID
   return (
     <MsalAuthProvider clientId={clientId} tenantId={tenantId} isPopupAuthenticationFlow>
       <Home />
@@ -98,8 +98,8 @@ const router = createBrowserRouter(
 );
 
 const App = () => {
-  const clientId = '9a565907-72fc-4c10-8c07-883463e5faa4'; // Replace with your own client ID
-  const tenantId = 'c9340d0a-8762-4b43-a2d1-f59bd6ef8726'; // Replace with your own tenant ID
+  const clientId = '<YOUR_CLIENT_ID>'; // Replace with your own client ID
+  const tenantId = '<YOUR_TENANT_ID>'; // Replace with your own tenant ID
   return (
     <MsalAuthProvider clientId={clientId} tenantId={tenantId}>
       <RouterProvider router={router} />
@@ -111,4 +111,3 @@ const App = () => {
 ## Props
 
 <Controls sort="requiredFirst" exclude={['auth', 'cache', 'system', 'telemetry']} />
-./MsalAuthProvider.stories.js
