chore: fixed minor issue

--- a/stories/system/getting-started.mdx
+++ b/stories/system/getting-started.mdx
@@ -189,4 +189,4 @@ import { AcademicCapIcon } from '@paalan/react-ui/icons/outline';
 - [Icons](/docs/system-icons--docs)
 - [Colors](/docs/system-colors--docs)
 - [Hooks](/docs/hooks-state-management-usecallbackref--documentation)
-- [Providers](/docs/providers-themeprovider--docs)import { Controls, Meta, Source, Story } from '@storybook/blocks';
+- [Providers](/docs/providers-themeprovider--docs)
