--- a/stories/system/icons.mdx
+++ b/stories/system/icons.mdx
@@ -1,80 +1,35 @@
 import { ColorItem, ColorPalette, IconGallery, IconItem, Meta } from '@storybook/blocks';
 
-import * as CustomIcons from '@paalan/react-icons/custom';
-import * as OutlineIcons from '@paalan/react-icons/outline';
-import * as SolidIcons from '@paalan/react-icons/solid';
+import * as AllIcons from '../../packages/icons/src/index';
 
 <Meta title="System/Icons" />
 
 # Icons
 
-This is a collection of icons used in the paalan applications. They are available in both outline and solid styles. The icons are available as React components.
+This is a collection of icons used in the package. You can find all the icons in [here](/docs/icons-all-icons--docs).
 
 ## Usage
 
-- Import the **Custom icon** you want to use from `@paalan/react-ui/icons`.
+- Import the **Icons** you want to use from `@paalan/react-icons`.
 
 ```tsx
-import { AccessibilityIcon } from '@paalan/react-ui/icons';
+import { AccessibilityIcon } from '@paalan/react-icons';
 
 <AccessibilityIcon />;
 ```
 
-- Import the **Outline icon** you want to use from `@paalan/react-ui/icons/outline`.
+## Quick Reference
 
-```tsx
-import { AcademicCapIcon } from '@paalan/react-ui/icons/outline';
+- [All Icons](/docs/icons-all-icons--docs)
 
-<AcademicCapIcon />;
-```
-
-- Import the **Solid icon** you want to use from `@paalan/react-ui/icons/solid`.
-
-```tsx
-import { AcademicCapIcon } from '@paalan/react-ui/icons/solid';
-
-<AcademicCapIcon />;
-```
-
-### Quick Links
-
-- [All Icons](/story/icons-icons--all-icons)
-- [Outline Icons](/story/icons-icons--outline-icons)
-- [Solid Icons](/story/icons-icons--solid-icons)
-- [Custom Icons](/story/icons-icons--custom-icons)
-
-## Outline
-
-**For this outline icons, We took a Reference from [Heroicons](https://heroicons.com/).**
+## List Icons
 
 <IconGallery>
-  {Object.entries(OutlineIcons).map(([name, Icon]) => (
-    <IconItem key={name} name={name}>
-      <Icon />
-    </IconItem>
-  ))}
-</IconGallery>
-
-## Solid
-
-**For this solid icons, We took a Reference from [Heroicons](https://heroicons.com/).**
-
-<IconGallery>
-  {Object.entries(SolidIcons).map(([name, Icon]) => (
-    <IconItem key={name} name={name}>
-      <Icon />
-    </IconItem>
-  ))}
-</IconGallery>
-
-## Custom
-
-**For this custom icons, We took a Reference from [Radix-UI](https://www.radix-ui.com/icons) and created some new icons for our application [Custom Icons](/story/icons-icons--custom-icons).**
-
-<IconGallery>
-  {Object.entries(CustomIcons).map(([name, Icon]) => (
-    <IconItem key={name} name={name}>
-      <Icon />
-    </IconItem>
-  ))}
+  {Object.entries(AllIcons)
+    .filter(([name]) => name !== 'Icon' && name !== 'convertSvgIconToIcon' && name !== 'createIcon')
+    .map(([name, Icon]) => (
+      <IconItem key={name} name={name}>
+        <Icon />
+      </IconItem>
+    ))}
 </IconGallery>
